--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* header */
 header {
-    border: 2px solid red;
+    border: 2px solid rgb(0, 0, 0);
     height: 837px;
     background-image: url("portfolio-resources-main/images/header_bg.png");
     background-position: bottom right;
@@ -128,6 +128,105 @@ img {
     width: 584px;
     height: 676px;
 
-    /* background-repeat: no-repeat; */
 
+
+}
+
+/* about */
+.about {
+    margin-top: 130px;
+    text-align: center;
+}
+
+.about-container {
+
+    margin: 0px auto;
+    width: 1140px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid rgb(8, 245, 210);
+    justify-content: center;
+}
+
+.infos h4 {
+    margin: 0px;
+}
+
+.about .para {
+    border: 1px solid coral;
+    width: 827px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+
+}
+
+.about-info {
+    margin: 0px auto;
+    display: flex;
+    width: 827px;
+    border: 2px solid rgb(25, 2, 231);
+    justify-content: space-evenly;
+    margin-bottom: 100px;
+}
+
+.about {
+
+
+    width: 1140px;
+    border: 2px solid rgb(222, 12, 215);
+    text-align: center;
+    border-radius: 10px;
+    background: #FFF8F3;
+}
+
+/* what i do */
+.skills .skill img {
+    width: 44px;
+    height: 44px;
+}
+
+.skill {
+    font-size: 16px;
+    width: 200px;
+    height: 377px;
+
+    padding: 30px;
+    line-height: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skills {
+    display: flex;
+    gap: 24px;
+
+}
+
+.what_do {
+    border: 1px solid red;
+    width: 1140px;
+    margin-top: 130px;
+    text-align: center;
+}
+
+.skill p {
+    width: 201px;
+    text-align: left;
+}
+
+.do {
+    width: 827px;
+    margin: 0px auto;
+    margin-bottom: 30px;
+}
+
+.what {
+    color: var(--dark-01, #181818);
+    text-align: center;
+
+    font-size: 35px;
+
+    line-height: normal;
 }
