--- a/style.css
+++ b/style.css
@@ -230,3 +230,51 @@ img {
 
     line-height: normal;
 }
+
+/* resume */
+.resume {
+    margin-top: 40px;
+    width: 1140px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.edu {
+    width: 511px;
+    font-size: 16px;
+    height: 180px;
+
+    margin: 0px;
+}
+
+.education {
+    gap: 71px;
+    display: flex;
+    flex-direction: column;
+}
+
+.ressume {
+    margin-top: 30px;
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: normal;
+    text-shadow: none;
+}
+
+hr {
+    margin: 0px;
+    width: 558px;
+    height: 1px;
+    background: #D1D1D1;
+}
+
+.btn {
+    margin-top: 30px;
+    margin-left: 40%;
+}
+
+i {
+    margin-right: 6px;
+}
