--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* header */
 header {
-    border: 2px solid rgb(0, 0, 0);
+    /* border: 2px solid rgb(0, 0, 0); */
     height: 837px;
     background-image: url("portfolio-resources-main/images/header_bg.png");
     background-position: bottom right;
@@ -25,7 +25,7 @@ nav {
 .nav-container {
     margin: 0px 226px 0px 226px;
     display: flex;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     align-items: center;
     justify-content: space-between;
 
@@ -96,7 +96,7 @@ button {
 
     margin: 0px 38px 0px 226px;
     width: 585px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .info h1 {
@@ -145,7 +145,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid rgb(8, 245, 210);
+    /* border: 2px solid rgb(8, 245, 210); */
     justify-content: center;
 }
 
@@ -154,7 +154,7 @@ img {
 }
 
 .about .para {
-    border: 1px solid coral;
+    /* border: 1px solid coral; */
     width: 827px;
     margin: 0 auto;
     margin-bottom: 30px;
@@ -165,7 +165,7 @@ img {
     margin: 0px auto;
     display: flex;
     width: 827px;
-    border: 2px solid rgb(25, 2, 231);
+    /* border: 2px solid rgb(25, 2, 231); */
     justify-content: space-evenly;
     margin-bottom: 100px;
 }
@@ -174,7 +174,7 @@ img {
 
 
     width: 1140px;
-    border: 2px solid rgb(222, 12, 215);
+    /* border: 2px solid rgb(222, 12, 215); */
     text-align: center;
     border-radius: 10px;
     background: #FFF8F3;
@@ -205,7 +205,7 @@ img {
 }
 
 .what_do {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 1140px;
     margin-top: 130px;
     text-align: center;
