--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ img {
     width: 1140px;
     display: flex;
     justify-content: space-between;
+
 }
 
 .edu {
@@ -248,9 +249,10 @@ img {
 }
 
 .education {
-    gap: 71px;
+    gap: 30px;
     display: flex;
     flex-direction: column;
+
 }
 
 .ressume {
@@ -271,10 +273,71 @@ hr {
 }
 
 .btn {
-    margin-top: 30px;
+    margin-top: 50px;
     margin-left: 40%;
+
 }
 
 i {
     margin-right: 6px;
+}
+
+/* footer */
+footer {
+    margin-top: 113px;
+    background: #FFF8F3;
+    padding: 130px 230px 130px 230px;
+
+}
+
+.footer_container {
+
+    width: 1140px;
+    width: 100%;
+    height: 600px;
+    display: flex;
+
+
+}
+
+.half {
+
+
+    width: 50%;
+}
+
+.icons i {
+    margin-right: 24px;
+    color: rgba(253, 110, 10, 1);
+}
+
+.msg_me {
+    margin-left: 117px;
+}
+
+.msg_me input {
+
+    display: block;
+    padding-left: 28px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    width: 461px;
+    height: 60px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
+}
+
+textarea {
+    padding-left: 28px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 24px;
+}
+
+.m_btn {
+
+    display: block;
 }
