--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ header {
     /* border: 2px solid rgb(0, 0, 0); */
     height: 837px;
     background-image: url("portfolio-resources-main/images/header_bg.png");
-    background-position: bottom right;
+    background-position: bottom right -30px;
+    background-position-y: bottom -10px;
     background-repeat: no-repeat;
     background-color: #FFF8F3;
 }
@@ -18,9 +19,18 @@ nav {
     background-repeat: no-repeat;
     background-size: 90px;
     background-position: 23px 38px;
+    /* background-position-y: bottom; */
 
 
 }
+
+/* .main-pic {
+    width: 584px;
+    height: 676px;
+    background-image: url('portfolio-resources-main/images/hardy.png');
+    background-position-y: bottom -20000px;
+    background-repeat: no-repeat;
+} */
 
 .nav-container {
     margin: 0px 226px 0px 226px;
@@ -127,7 +137,7 @@ img {
     /* background-image: url("portfolio-resources-main/images/header_bg.png"); */
     width: 584px;
     height: 676px;
-
+    padding: 4px;
 
 
 }
@@ -301,7 +311,6 @@ footer {
 }
 
 .half {
-
 
     width: 50%;
 }
