--- a/style.css
+++ b/style.css
@@ -283,8 +283,10 @@ hr {
 }
 
 .btn {
-    margin-top: 50px;
-    margin-left: 40%;
+    /* margin-top: 50px;
+    margin-left: 40%; */
+    display: block;
+    margin: 0 auto;
 
 }
 
@@ -331,7 +333,7 @@ footer {
     padding-top: 18px;
     padding-bottom: 18px;
     width: 461px;
-    height: 60px;
+    height: 30px;
     margin-bottom: 24px;
     border: none;
     border-radius: 5px;
@@ -349,4 +351,133 @@ textarea {
 .m_btn {
 
     display: block;
+}
+
+.hide {
+    display: none;
+}
+
+@media screen and (max-width:568px) {
+
+    nav,
+    header {
+        background-image: none;
+    }
+
+    header {
+        height: auto;
+    }
+
+    .nav-container {
+        margin: auto;
+    }
+
+    .nav-container,
+    ul,
+    .header-info {
+        gap: 15px;
+        flex-direction: column;
+        /* justify-content: none; */
+    }
+
+    .info {
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        text-align: center;
+    }
+
+    .main-pic img {
+        width: 100%;
+        height: auto;
+    }
+
+    footer {
+        padding: 0px;
+    }
+
+    .footer_container {
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .msg_me {
+        margin: 0px;
+    }
+
+    .msg_me input,
+    textarea {
+        width: 100%;
+        height: 100%;
+    }
+
+    .down {
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    button {
+        font-size: 12px;
+        width: auto;
+    }
+
+    p {
+        font-size: 15px;
+    }
+
+    h1 {
+        font-size: 75px;
+    }
+
+    h2 {
+        font-size: 40px;
+    }
+
+    .about-container,
+    .what_do {
+        width: 100%;
+    }
+
+    .about-info {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .about>h1 {
+        font-size: 50px;
+    }
+
+    .about-container,
+    .about {
+        width: 100%;
+    }
+
+    .about .para {
+        width: 100%;
+    }
+
+    .skills {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .skill {
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+    }
+
+    .skill p {
+        width: 90%;
+        text-align: justify;
+    }
+
+    .do {
+        width: 100%;
+    }
+
+
 }
