--- a/style.css
+++ b/style.css
@@ -466,6 +466,7 @@ textarea {
     }
 
     .skill {
+        text-align: center;
         width: 100%;
         height: 100%;
         padding: 10px;
